--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -1,81 +1,89 @@
+<div id="recipemain" class="book cotainer-fluid row">
+    <!-- filters -->
+    <div id="filters">
+        <button type="button" class="btn btn-outline-dark">BBQ</button>
+        <button type="button" class="btn btn-outline-dark">DESSERT</button>
+        <button type="button" class="btn btn-outline-dark">FRIED</button>
+        <button type="button" class="btn btn-outline-dark">STEAMED</button><br>
+        <button type="button" class="btn btn-outline-dark">Cantonese</button>
+        <button type="button" class="btn btn-outline-dark">Chinese</button>
+        <button type="button" class="btn btn-outline-dark">Japanese</button>
+        <button type="button" class="btn btn-outline-dark">Korean</button>
+        <button type="button" class="btn btn-outline-dark">Thai</button>
 
-        <div id="recipemain" class="book cotainer-fluid row">
-<!-- filters -->
-            <div id="filters">
-                <button type="button" class="btn btn-outline-dark">BBQ</button>
-                <button type="button" class="btn btn-outline-dark">STEAMED</button>
-                <button type="button" class="btn btn-outline-dark">DESSERT</button>
-                <button type="button" class="btn btn-outline-dark">FRIED</button><br>
-                <button type="button" class="btn btn-outline-dark">Cantonese</button>
-                <button type="button" class="btn btn-outline-dark">Chinese</button>
-                <button type="button" class="btn btn-outline-dark">Japanese</button>
-                <button type="button" class="btn btn-outline-dark">Korean</button>
-                <button type="button" class="btn btn-outline-dark">Thai</button>
-                 <!-- sort -->
-            <select id="sort" class="custom-select mr-sm-2" >
-                <option selected>Sort</option>
-                <option value="1">Rating</option>
-                <option value="2">New</option>
-            </select>
-            </div>
-           
-
-            <!-- first row -->
-            <div class="row center">
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2> <a href="/recipes:1"> Spicy Fishball</a></h2>
-                    <p>pullip123</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-            </div>
-            <!-- second row -->
-            <div class="row center">
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-                </div>
-
-            </div>
-
-        </div>
     </div>
+
+
+    <div id="r_recipe">
+        <button id="newrecipe" class="btn btn-danger my-2 my-sm-0">Add new recipe</button><br>
+        <!-- sort -->
+        <select id="sort" class="custom-select">
+            <option selected>Sort</option>
+            <option value="1">Rating</option>
+            <option value="2">New</option>
+        </select>
+
+    </div>
+
+
+
+
+    <!-- first row -->
+    <div class="row center">
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2> <a href="/recipe:1"> Spicy Fishball</a></h2>
+            <p>pullip123</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+    </div>
+    <!-- second row -->
+    <div class="row center">
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+            <h2>Recipe Name</h2>
+            <p>Username</p>
+            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
+        </div>
+
+    </div>
+
+</div>
+</div>
