--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,15 +29,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/recipe">Recipes</a>
+                        <a class="nav-link" href="/recipes">Recipes</a>
                     </li>
 
                 </ul>
 
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-                </form>
+   <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
 
 
                 <ul>
@@ -47,41 +47,29 @@
                             My Page
                         </a>
 
-                        <div class="dropdown-menu container-fluid " id="dropdownmenu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu container-fluid" id="dropdownmenu" aria-labelledby="navbarDropdown">
 
-                            <h5 id="welcomeuser" class="justify-content-lg-center form-inline">Welcome Pullip123!</h5>
-
-                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/mypage">My Page</a>
-                            <a class="dropdown-item" href="/signup">Sign Up</a>
-
+                            <a class="dropdown-item" href="/mypage">Login with Facebook</a>
 
                             <div class="dropdown-divider"></div>
-                            <div class="icons justify-content-lg-center form-inline">
 
-                                <img src="t2.png" class="lgicon" alt="twitter">
-                                <img src="g2.png" class="lgicon ml-lg-2" alt="google">
-                            </div>
-                            <div class="dropdown-divider"></div>
                             <form class="justify-content-lg-center form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2 my-lg-2" type="search" placeholder="ID"
-                                    aria-label="ID">
+                                <input class="form-control mr-sm-2" type="search" placeholder="ID" aria-label="ID">
 
                                 <input class="form-control mr-sm-2" type="search" placeholder="Password"
                                     aria-label="Password">
 
-                                <div class="icons mb-lg-4">
+                                <button id="login" class="m-n1 btn btn-outline-success my-2 my-sm-0"
+                                    type="submit">Login</button>
 
-                                    <button id="forgotpw" class=" btn btn-outline-primary mt-lg-4" type="submit">Forgot
-                                        password</button>
-                                    <button id="login" class="btn btn-outline-primary mt-lg-4 ml-lg-2"
-                                        type="submit">Login</button>
-
-                                </div>
-
+                                   <!-- <button id="password" class="m-n1 btn btn-outline-success my-2 my-sm-0"><a href="#"> Forgot
+                                        password</a>
+                                </button> -->
                             </form>
 
-
+                     
+                            
                         </div>
                     </div>
                 </ul>
@@ -92,7 +80,7 @@
             </div>
         </nav>
 
-        {{{body}}}
+ {{{body}}}
 
         {{!-- <div class="book roundborder row" id="indexpage">
 
