--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -94,6 +94,14 @@
 
         {{{body}}}
 
+
+        <div class="footer">
+            <div class="col-lg-3">
+                <p>Street food hunters</p>
+            </div>
+          
+        </div>
+
         {{!-- <div class="book roundborder row" id="indexpage">
 
             
