--- a/views/mypage.handlebars
+++ b/views/mypage.handlebars
@@ -1,1 +1,103 @@
-<h1>My page</h1>
+<div class="book roundborder cotainer-fluid" id="mypagebox">
+
+    <h1 class="p-4 grey">Hi Username!</h1>
+
+
+    <h3 class="pb-4">My recipes</h3>
+
+ <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe1">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Spicy Fishball</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+
+ <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe2">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Recipe name2</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+        
+
+        <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe1">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Recipe name3</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+
+
+    <h3 class="py-4">Favourites</h3>
+    <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe1">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Spicy Fishball</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+
+ <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe2">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Recipe name2</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+        
+
+        <div class="book cotainer-fluid mypagerecipe" id="mypagerecipe1">
+
+    <div class="left col-sm-12 col-md-6">
+        <img id="foodimage" class="roundborder" src="fishball.jpg" alt="food">
+    </div>
+
+    <div class="middle col-sm-12 col-md-6 center">
+        <!-- 4 -->
+        <br><h3>Recipe name3</h3><br>
+        <h1>★★★★★</h1>
+
+    </div>
+
+</div>
+
+
+</div>
