--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -6,7 +6,7 @@
 
     <div id="recipebox" class="middle col-sm-12 col-md-6">
         <!-- 4 -->
-        <br><h1>Fishball</h1><br>
+        <br><h1>Spicy Fishball</h1><br>
         <br><h3>Difficulty: ★★★☆☆   </h3>
         <h3>Cooking time: 20minutes </h3>
         <h3>Ingredients:
