--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -15,7 +15,10 @@
 
 
     <div id="r_recipe">
-        <button id="newrecipe" class="btn btn-danger my-2 my-sm-0">Add new recipe</button><br>
+
+            <a href="/recipe" role="button" id="newrecipe" class="btn btn-danger my-2 my-sm-0">Add new recipe
+            </a><br>
+
         <!-- sort -->
         <select id="sort" class="custom-select">
             <option selected>Sort</option>
