--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,74 +1,59 @@
+<!-- sign up part -->
+<div class="signup">
+    <br>
+    <h1 class="grey">Sign up</h1><br>
+    <form>
+        <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+                <input type="username" class="form-control" id="usernameInput" placeholder="Email can be max 25 characters">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="pwInput" placeholder="Password must contain more than 8 characters">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="pwConfirm" placeholder="Please confirm the password">
+            </div>
+        </div>
 
-        <!-- sign up part -->
-        <div class="signup">
-            <br>
-            <h1>Sign up</h1><br>
-            <form>
-                <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Username</label>
-                    <div class="col-sm-10">
-                        <input type="username" class="form-control" id="usernameInput">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pwInput">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pwConfirm">
-                    </div>
-                </div>
-                <fieldset class="form-group">
-                    <div class="row">
-                        <legend class="col-form-label col-sm-2 pt-0">Security Question</legend>
+        <div class="form-group row">
+            <label for="security" class="col-sm-2 col-form-label">Security Question</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="securityQ" placeholder="This question will be asked when you forget your password">
+            </div>
+        </div>
 
-
-                        <div class="col-sm-10">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="gridRadios1">
-                                    First radio
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
-                                    value="option2">
-                                <label class="form-check-label" for="gridRadios2">
-                                    Second radio
-                                </label>
-                            </div>
-                            <div class="form-check disabled">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3"
-                                    value="option3" disabled>
-                                <label class="form-check-label" for="gridRadios3">
-                                    Third disabled radio
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </fieldset>
-                <div class="form-group row">
-                    <div class="col-sm-2">Checkbox</div>
-                    <div class="col-sm-10">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="gridCheck1">
-                            <label class="form-check-label" for="gridCheck1">
-                                Example checkbox
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            <br><br><div class="form-group row">
-                    <div class="col-sm-10">
-                        <button type="submit" class="btn btn-outline-dark">Sign up</button>
-                    </div>
-                </div>
-            </form>
+        <div class="form-group row">
+            <label for="security" class="col-sm-2 col-form-label">Your Answer</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="securityA">
+            </div>
         </div>
 
 
+
+        <div class="form-group row">
+            <div class="col-sm-2">Recieve email</div>
+            <div class="col-sm-10">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck1">
+                    <label class="form-check-label" for="gridCheck1">
+                        Yes, I want to receive email
+                    </label>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-outline-dark">Sign up</button>
+            </div>
+        </div>
+    </form>
+</div>
