--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -32,11 +32,78 @@
 
 
     <!-- first row -->
+<!--
+let list1 = {
+    recipe: [
+    {
+        recipe_id: 1,
+        recipe_name: "Spicy Fishball",
+        users_user_id: "pullip123",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x2764;&#x2764;&#x2764;&#x2764;&#x2764;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    },{
+        recipe_id: 0,
+        recipe_name: "Recipe Name",
+        users_user_id: "Username",
+        recipe_image_url: "fishball.jpg",
+        recipe_rating: '&#x25c7;&#x25c7;&#x25c7;&#x25c7;&#x25c7;'
+    }]
+}
+    -->
+</div>
+
+<div class="row center">
+    {{#each recipe}}
+    <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
+        <h2> <a href='/recipe:{{recipe_id}}'>{{recipe_name}}</a></h2>
+        <p>{{users_user_id}}</p>
+        <p>{{{recipe_rating}}}</p>  <!-- need triple brackets here -->
+        <img class="minviewimg" src="{{recipe_image_url}}" alt="recipe image">
+    </div>
+    {{/each}}
+</div>
+<!-- second row 
     <div class="row center">
 
         <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-            <h2> <a href="/recipe:1"> Spicy Fishball</a></h2>
-            <p>pullip123</p>
+            <h2>Recipe Name</h2>
+            <p>Username</p>
             <img class="minviewimg" src="fishball.jpg" alt="recipe image">
         </div>
 
@@ -59,34 +126,4 @@
         </div>
 
     </div>
-    <!-- second row -->
-    <div class="row center">
-
-        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-            <h2>Recipe Name</h2>
-            <p>Username</p>
-            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-        </div>
-
-        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-            <h2>Recipe Name</h2>
-            <p>Username</p>
-            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-        </div>
-
-        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-            <h2>Recipe Name</h2>
-            <p>Username</p>
-            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-        </div>
-
-        <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-            <h2>Recipe Name</h2>
-            <p>Username</p>
-            <img class="minviewimg" src="fishball.jpg" alt="recipe image">
-        </div>
-
-    </div>
-
-</div>
-</div>
+-->
