--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -6,16 +6,17 @@
 
     <div id="recipebox" class="middle col-sm-12 col-md-6">
         <!-- 4 -->
-        <br><h1>Spicy Fishball</h1><br>
-        <br><h3>Difficulty: ★★★☆☆   </h3>
-        <h3>Cooking time: 20minutes </h3>
+        <br><h1>{{name}}</h1><br>
+        <br><h3>Difficulty: {{difficulty}}   </h3>
+        <h3>Cooking time: {{cookingtime}}minutes </h3>
         <h3>Ingredients:
-            <br>Fish 100g, Flour 200g, 1/2 Water</h3><br>
+            <br>{{ingredient}}</h3><br>
         <h3>How to:
-            <ul>1. do something</ul>
-            <ul>2. do something more</ul>
-            <ul>3. do some thing again</ul>
-            <ul>4. eat it</ul>
+            <ol>
+                {{#each how_to}}
+                <li>{{this}}</li>
+                {{/each}}
+            </ol>
         </h3>
 
     </div>
