--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,7 +1,7 @@
 <div class="book roundborder cotainer-fluid">
 
     <div class="left col-sm-12 col-md-6">
-        <img id="food" class="roundborder" src="fishball.jpg" alt="food">
+        <img id="food" class="roundborder" src="{{imgae_url}}" alt="food">
     </div>
 
     <div id="recipebox" class="middle col-sm-12 col-md-6">
