empty field checking

--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -43,11 +43,11 @@
             <label for="star3" title="text">3 stars</label>
             <input type="radio" id="star2" name="rate" value="2" />
             <label for="star2" title="text">2 stars</label>
-            <input type="radio" id="star1" name="rate" value="1" />
+            <input type="radio" id="star1" name="rate" value="1" checked/>
             <label for="star1" title="text">1 star</label>
         </div>
 
-        <br><input type="submit" name="submit">
+        <br><input id="ice" type="submit" name="submit">
 
     </form>
 </div>
@@ -68,7 +68,7 @@
             <label class="custom-file-label" for="customFile">Upload your food image</label>
         </div><br>
 
-        <br><input type="submit" name="submit">
+        <br><input id="electric" type="submit" name="submit">
 
     </form>
 
