--- a/views/newrecipe.handlebars
+++ b/views/newrecipe.handlebars
@@ -6,19 +6,19 @@
         <div class="form-group row">
             <label for="recipename" class="col-sm-2 col-form-label">Recipe Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="recipename">
+                <input type="text" class="form-control nullcheck" id="recipename">
             </div>
         </div>
         <div class="form-group row">
             <label for="cookingtime" class="col-sm-2 col-form-label">Cooking Time</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="cookingtime" placeholder="ex) 10minutes">
+                <input type="text" class="form-control nullcheck" id="cookingtime" placeholder="ex) 10minutes">
             </div>
         </div>
         <div class="form-group row">
             <label for="text" class="col-sm-2 col-form-label">Description</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="recipedescription" placeholder="Please describe your recipe in short">
+                <input type="text" class="form-control nullcheck" id="recipedescription" placeholder="Please describe your recipe in short">
             </div>
         </div>
         <fieldset class="form-group">
@@ -78,11 +78,11 @@
         </fieldset>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">HOW TO</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please describe how you made the food"></textarea>
+            <textarea class="form-control nullcheck" id="recipehowto" rows="5" placeholder="Please describe how you made the food"></textarea>
             </div>
     <br><br><div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-outline-dark">UPLOAD</button>
+                <button id="fire" type="submit" class="btn btn-outline-dark">UPLOAD</button>
             </div>
         </div>
     </form>
