--- a/public/style.css
+++ b/public/style.css
@@ -188,7 +188,7 @@ color: rgba(0, 116, 6, 0.842);
 
 .rate:not(:checked) > input {
     position:absolute;
-    top:-9999px;
+    left:-9999px;
 }
 .rate:not(:checked) > label {
 
