--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -94,7 +94,7 @@ let list1 = {
         <h2> <a href='/recipe:{{recipe_id}}'>{{recipe_name}}</a></h2>
         <p>{{users_user_id}}</p>
         <p>{{{recipe_rating}}}</p>  <!-- need triple brackets here -->
-        <img class="minviewimg" src="{{recipe_image_url}}" alt="recipe image">
+        <img class="minviewimg col-sm-10" src="{{recipe_image_url}}" alt="recipe image">
     </div>
     {{else}}
     <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
